--- a/main.html
+++ b/main.html
@@ -1,70 +1,36 @@
 <!DOCTYPE html>
+
 <html>
+
 <head>
-    <title>Your Portfolio</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <!-- Navbar -->
-    <nav class="bg-gray-800 text-white p-4">
-        <div class="container mx-auto flex justify-between">
-            <a href="#" class="text-2xl font-bold">Your Name</a>
-            <ul class="flex space-x-4">
-                <li><a href="#" class="hover:text-gray-400">Home</a></li>
-                <li><a href="#" class="hover:text-gray-400">About</a></li>
-                <li><a href="#" class="hover:text-gray-400">Portfolio</a></li>
-                <li><a href="#" class="hover:text-gray-400">Contact</a></li>
-            </ul>
-        </div>
-    </nav>
+	<!-- the entire body must be written by student -->
+	<img src="https://images.unsplash.com/photo-1594165681163-1b85559cf250?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxNDB8fHxlbnwwfHx8fHw%3D&auto=format&fit=crop&w=600&q=60" alt="#">
+	<h1>Rajesh Yadav</h1>
+	<a href="https://www.linkedin.com/in/rajeshyadav10/" taregt="_blank">Linked In</a>
+	<section id="skills">
+		<ol>
+			<li>HTML</li>
+			<li>CSS</li>
+			<li>JAVASCRIPT</li>
+			<li>REACT</li>
+			<li>MYSQL</li>
+		</ol>
+	</section>
+	<section id="projects">
+		<ul>
+			<li>My Portfolio</li>
+			<li>Number guessing game</li>
+			<li>to-do App</li>
+			<li>Blinkit clone</li>
+		</ul>
+	</section>
+    <script type="text/javascript" src="./script.js">
+</script>
 
-    <!-- Hero Section -->
-    <header class="bg-gray-900 text-white py-20">
-        <div class="container mx-auto text-center">
-            <h1 class="text-4xl font-bold">Welcome to My Portfolio</h1>
-            <p class="mt-4">I am a software developer passionate about creating awesome applications.</p>
-            <a href="#contact" class="mt-8 inline-block px-6 py-3 bg-blue-500 text-white font-semibold rounded-lg hover:bg-blue-600">Get in Touch</a>
-        </div>
-    </header>
-
-    <!-- About Section -->
-    <section class="py-16">
-        <div class="container mx-auto text-center">
-            <h2 class="text-2xl font-semibold">About Me</h2>
-            <p class="mt-4">I'm a software developer with a strong background in creating efficient and user-friendly applications.</p>
-        </div>
-    </section>
-
-    <!-- Portfolio Section -->
-    <section class="bg-gray-100 py-16">
-        <div class="container mx-auto text-center">
-            <h2 class="text-2xl font-semibold">My Portfolio</h2>
-            <div class="grid grid-cols-2 gap-8 mt-8">
-                <!-- Sample portfolio items -->
-                <div class="bg-white p-4 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold">Project 1</h3>
-                    <p class="mt-2">Description of the project goes here.</p>
-                </div>
-                <div class="bg-white p-4 rounded-lg shadow">
-                    <h3 class="text-lg font-semibold">Project 2</h3>
-                    <p class="mt-2">Description of the project goes here.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact" class="py-16 bg-gray-800 text-white">
-        <div class="container mx-auto text-center">
-            <h2 class="text-2xl font-semibold">Contact Me</h2>
-            <p class="mt-4">Have a project in mind or want to chat? Feel free to reach out!</p>
-            <a href="mailto:you@example.com" class="mt-8 inline-block px-6 py-3 bg-blue-500 text-white font-semibold rounded-lg hover:bg-blue-600">Email Me</a>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="bg-gray-900 text-white text-center py-6">
-        <p>&copy; 2023 Your Name. All rights reserved.</p>
-    </footer>
 </body>
+
 </html>
